vndb-api-derive/tests/ui/flatten_fail.stderr
error: `#[vndb_field(nested)]` cannot be combined with `flatten`
 --> tests/ui/flatten_fail.rs:5:5
  |
5 |     #[vndb_field(nested, flatten)]
  |     ^
